--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^4.4.1",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "redux-form": "^4.2.2"
   }
 }
