--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "serve:dist": "node server.js --env=dist",
     "start": "node server.js --env=dev",
     "test": "karma start",
-    "test:watch": "karma start --autoWatch=true --singleRun=false"
+    "test:watch": "karma start --autoWatch=true --singleRun=false --reporters=mocha"
   },
   "repository": "",
   "keywords": [],
@@ -49,18 +49,19 @@
     "karma-webpack": "^1.7.0",
     "minimist": "^1.2.0",
     "mocha": "^2.2.5",
+    "node-sass": "^3.4.2",
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.0.0",
     "react-addons-test-utils": "^0.14.0",
     "react-hot-loader": "^1.2.9",
     "rimraf": "^2.4.3",
+    "sass-loader": "^3.1.2",
+    "skin-deep": "^0.15.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.12.0",
-    "sass-loader": "^3.1.2",
-    "node-sass": "^3.4.2"
+    "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
     "core-js": "^2.0.0",
