--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^4.4.1",
+    "react-router": "^2.0.1",
     "redux": "^3.3.1",
     "redux-form": "^4.2.2"
   }
