--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "core-js": "^2.0.0",
+    "draft-js": "^0.3.0",
     "foundation-sites": "^6.2.0",
     "immutable": "^3.7.6",
     "normalize.css": "^3.0.3",
