--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-quill": "^0.4.1",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
+    "react-tooltip": "^1.1.4",
     "redux": "^3.3.1",
     "redux-form": "^4.2.2",
     "redux-thunk": "^2.0.1"
