--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-tooltip": "^1.1.4",
     "redux": "^3.3.1",
     "redux-form": "^4.2.2",
+    "redux-localstorage": "^0.4.0",
     "redux-thunk": "^2.0.1"
   }
 }
