--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "core-js": "^2.0.0",
     "draft-js": "^0.3.0",
+    "draft-js-export-html": "^0.1.9",
     "foundation-sites": "^6.2.0",
     "immutable": "^3.7.6",
     "normalize.css": "^3.0.3",
