--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "font-awesome": "^4.5.0",
     "foundation-sites": "^6.2.0",
     "immutable": "^3.7.6",
+    "moment": "^2.12.0",
     "normalize.css": "^3.0.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
